...
            VStack {
                    if myViewModel.getMyLensesState() {
                            lenseImage(ison: true, limit: Double(myViewModel.myModel.validPeriod), utilization: Double(myViewModel.myModel.daysUsed), currentSessionUtilization: Double(myViewModel.myModel.daysUsedCurrentSession))
                            .onTapGesture {
                                myViewModel.takeLensesOff()
                            }
                            .accessibilityIdentifier("LenseImageOn")
                            .padding(15)
                    }
                    else {
                        lenseImage(ison: false, limit: Double(myViewModel.myModel.validPeriod), utilization: Double(myViewModel.myModel.daysUsed), currentSessionUtilization: Double(myViewModel.myModel.daysUsedCurrentSession))
                            .onTapGesture {
                                myViewModel.PutLensesOn()
                            }
                            .accessibilityIdentifier("LenseImageOff")
                            .padding(15)
                            
                    }
                    Spacer()
                    Divider()

...
                        myViewModel.takeLensesOff()
                        self.selection = "Setup"
                    }) {
                        Text(String(format: NSLocalizedString("Сменить линзы", comment: "Change lenses (main view)")))
                        .foregroundColor(.white)
                        .font(.title)
                        .accessibilityIdentifier("ChangeLensesButton")
                    }
                    .frame(width: parameters.buttonWidth, height: parameters.buttonHight, alignment: /*@START_MENU_TOKEN@*/.center/*@END_MENU_TOKEN@*/)
                    .padding(.vertical)
                    .background(Color.blue)
                    .cornerRadius(parameters.buttonRadius)
                    
                    Button(action: {
                        self.selection = "Details"
                    }) {
                        Text(String(format: NSLocalizedString("Состояние линз", comment: "Lenses condition (main view)")))
                        .foregroundColor(.white)
                        .font(.title)
                        .accessibilityIdentifier("DetailsButton")
                    }
                    .frame(width: parameters.buttonWidth, height: parameters.buttonHight, alignment: /*@START_MENU_TOKEN@*/.center/*@END_MENU_TOKEN@*/)
                    .padding(.vertical)
                    .background(Color.blue)
                    .cornerRadius(parameters.buttonRadius)
                    
                    Button(action: {
                        self.selection = "Settings"
                    }) {
                        Text(String(format: NSLocalizedString("Настройки", comment: "Settings (main view)")))
                        .foregroundColor(.white)
                        .font(.title)
                        .accessibilityIdentifier("SettingsButton")
                    }
                    .frame(width: parameters.buttonWidth, height: parameters.buttonHight, alignment: /*@START_MENU_TOKEN@*/.center/*@END_MENU_TOKEN@*/)
                    .padding(.vertical)
                    .background(Color.blue)
                    .cornerRadius(parameters.buttonRadius)
                }
...
